# OffscreenOpenGL

./: CMakeLists.txt
src/: eglinfo.c  triangle.cpp
